Fix: icons are not centered vertically in button with icon

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,6 +108,7 @@ button,
     &.with-icon
     {
         display: flex;
+        align-items: center;
         justify-content: center;
         gap: 0.5rem;
     }
